html_css_navigator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <!-- header: navigation-in-all-page and jumbotron -->
     <nav>
         <!-- menù left and rigt -->
+        <div id="nav-menu">
+            <img src="img/logo-small.png" alt="logo">
+            <a href="#">Perchè Dropbox</a>
+            <a href="#">Funzioni</a>
+            <a href="#">Piani e Prezzi</a>
+        </div>
+
+        <div id="nav-menu">
+            <a href="#">Supporto</a>
+            <a href="#">Contatta l'ufficio vendite</a>
+            <a href="#">Accedi</a>
+            <span id="sp-nav"><a>Inizia</a></span>
+        </div>
     </nav>
 
     <div>
