--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Discord business</title>
 </head>
@@ -32,14 +32,18 @@
         <!-- jumbotron -->
         <div id="jumbo-contain">
             <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-            <div>
-                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                <button class="button">Inizia la tua prova gratuita</button>
-                <span>Annulla in qualsiasi momento</span>
-                <span>&#129139;</span>
+            <div class="flex">
+                <div id="jumbo-left">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <button class="button">Inizia la tua prova gratuita</button>
+                    <br>
+                    <span>Annulla in qualsiasi momento</span>
+                    <span class="dwn-arw-jmb">&#129139;</span>
+                </div>
+                <div>
+                    <img id="jumb-img" src="img/jumbo.png" alt="example view">
+                </div>
             </div>
-            <!-- img on right with absolute? -->
-            <img class="img-prov" src="img/jumbo.png" alt="example view">
         </div>
         
     </header>
