html_css_main-section-4

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
+    <!-- header: navigation-in-all-page and jumbotron -->
     <header>
 
-        <!-- header: navigation-in-all-page and jumbotron -->
         <nav>
             <!-- menù left and rigt -->
             <div id="nav-menu">
@@ -35,9 +35,11 @@
             <div class="flex">
                 <div id="jumbo-left">
                     <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+
                     <button class="button">Inizia la tua prova gratuita</button>
-                    <br>
+
                     <span>Annulla in qualsiasi momento</span>
+
                     <span class="dwn-arw-jmb">&#129139;</span>
                 </div>
                 <div>
@@ -92,9 +94,9 @@
         </section>
 
         <!-- section 4 -->
-        <section>
-            <h2></h2>
-            <a href=""></a>
+        <section id="sct-4">
+            <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+            <a href="#">Scopri di più sui nostri clienti</a>
         </section>
 
         <!-- section 5 -->
