html_css_main-section-6

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
 
     <!-- main: 7 sections -->
-    <main id="main-container">
+    <main>
 
         <!-- section 1 -->
-        <section>
+        <section class="main-container">
             <h2></h2>
             <div>
                 <div></div>
@@ -66,7 +66,7 @@
         </section>
 
         <!-- section 2 -->
-        <section class="flex">
+        <section class="flex main-container">
             <!-- left -->
             <div>
                 <img id="sct-2-l" src="img/partner.png" alt="friendly">
@@ -81,7 +81,7 @@
         </section>
 
         <!-- section 3 -->
-        <section>
+        <section class="main-container">
             <h2></h2>
             <div>
                 <!-- 6 div with flex? -->
@@ -94,26 +94,28 @@
         </section>
 
         <!-- section 4 -->
-        <section id="sct-4">
+        <section id="sct-4" class="main-container">
             <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
             <a href="#">Scopri di più sui nostri clienti</a>
         </section>
 
         <!-- section 5 -->
-        <section>
+        <section class="main-container">
             <!-- showcase? -->
         </section>
 
         <!-- section 6 -->
-        <section>
-            <!-- left -->
-            <h2></h2>
-            <!-- right -->
-            <button></button>
+        <section id="sct-6">
+            <div class="main-container flex">
+                <!-- left -->
+                <h2>Porta Dropbox Business nella tua azienda.</h2>
+                <!-- right -->
+                <button>Inizia la tua prova gratuita</button>
+            </div>
         </section>
 
         <!-- section 7 -->
-        <section>
+        <section class="main-container">
             <h2></h2>
             <!-- 3 div maybe? -->
         </section>
