html_css_footer-first-part

--- a/index.html
+++ b/index.html
@@ -123,12 +123,63 @@
 
 
     <!-- footer: 5 menu anchors, lang -->
-    <footer>
+    <footer id="foot-contain">
         <!-- menu x 5 -->
-        <div>
-            <h4></h4>
-            <ul>
-            </ul>
+        <div class="flex">
+            <div class="foot-li-contain">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-li-contain">
+                <h4>Prodotti</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-li-contain">
+                <h4>Azienda</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-li-contain">
+                <h4>Supporto</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-li-contain">
+                <h4>Community</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perchè Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>funzioni</li>
+                </ul>
+            </div>
         </div>
 
         <!-- lang -->
