html_css_main-section-3

--- a/index.html
+++ b/index.html
@@ -82,14 +82,44 @@
         </section>
 
         <!-- section 3 -->
-        <section class="main-container">
-            <h2></h2>
-            <div>
+        <section id="sct-3" class="main-container">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+            <div class="flex">
                 <!-- 6 div with flex? -->
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
+                <div class="card-sct-3">
+                    <img src="img/business-feature-switching-tools.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+
+                <div class="card-sct-3">
+                    <img src="img/business-feature-send-files-it.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+
+                <div class="card-sct-3">
+                    <img src="img/business-feature-coordinate-it.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+
+                <div class="card-sct-3">
+                    <img src="img/business-feature-integrations-it.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+
+                <div class="card-sct-3">
+                    <img src="img/business-feature-multi-device.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                </div>
+
+                <div class="card-sct-3">
+                    <img src="img/business-feature-security.png" alt="image 1">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                 </div>
             </div>
         </section>
