html_css_main-section-7

--- a/index.html
+++ b/index.html
@@ -146,9 +146,37 @@
         </section>
 
         <!-- section 7 -->
-        <section class="main-container">
-            <h2></h2>
+        <section id="sct-7" class="main-container">
+            <h2>Domande frequenti</h2>
             <!-- 3 div maybe? -->
+            <div>
+                <div class="flex sct-7-menu">
+                    <span>
+                        Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+
+                <div class="flex sct-7-menu">
+                    <span>
+                        Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+
+                <div class="flex sct-7-menu">
+                    <span>
+                        Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </span>
+                </div>
+            </div>
         </section>
     </main>
 
