html_css_main_sct-1-upper-part

--- a/index.html
+++ b/index.html
@@ -56,8 +56,21 @@
     <main>
 
         <!-- section 1 -->
-        <section class="main-container">
-            <h2></h2>
+        <section id="sct-1" class="main-container">
+            <h2>Trova il business che fa per te</h2>
+
+            <div id="check-cont-sct-1">
+                <span>
+                    <input type="checkbox">
+                    <label for="mensile">Fatturazione mensile</label>
+                </span>
+
+                <span>
+                    <input type="checkbox">
+                    <label for="annuale">Fatturazione annuale</label>
+                </span>
+            </div>
+
             <div>
                 <div></div>
                 <div></div>
