html_main-structure-card-sct-1

--- a/index.html
+++ b/index.html
@@ -72,9 +72,35 @@
             </div>
 
             <div>
-                <div></div>
-                <div></div>
-                <div></div>
+
+                <!-- card -->
+                <section>
+
+                    <!-- head -->
+                    <div>
+                        <span></span>
+                    </div>
+
+                    <!-- main -->
+                    <div>
+                        <h5></h5>
+                        <span></span>
+
+                        <ul>
+                            <li></li>
+                        </ul>
+
+                        <button></button>
+                        <span></span>
+                        <a href="#"></a>
+
+                        <h6></h6>
+                        <ul>
+                            <li></li>
+                        </ul>
+                    </div>
+                    
+                </section>
             </div>
             <div></div>
         </section>
