html_css_main-sct-1-orizontal-card

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
         <!-- section 1 -->
         <section id="sct-1" class="main-container">
+
+            <!-- title -->
             <h2>Trova il business che fa per te</h2>
 
             <div id="check-cont-sct-1">
@@ -71,6 +73,7 @@
                 </span>
             </div>
 
+            <!-- vertical card -->
             <div class="flex card-flex">
 
                 <!-- card 1 -->
@@ -218,7 +221,34 @@
 
                 </section>
             </div>
-            <div></div>
+
+            <!-- orizontal card -->
+            <section class="card-container">
+
+                <!-- head -->
+                <div>
+                    <h4><i class="fa-solid fa-building"></i> Team</h4>
+                </div>
+
+                <!-- main -->
+                <div>
+                    <div class="main-card-sct-1 flex ori-card">
+                        
+                        <div>
+                            <h5>Enterprise</h5>
+                            <span >Contatta l'ufficio vendite per i prezzi</span>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                        </div>
+
+                        <div>
+                            <button class="button">Contatta l'ufficio vendite</button>
+                        </div>
+                    </div>
+                    
+                </div>
+
+
+            </section>
         </section>
 
 
